+ прикрутил Spring email

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,9 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
-    
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: kirillshcherba92@gmail.com
+#    password: Jumpjet_123
+#    protocol: smtp
