Добавлена динамическая очередь ActiveMQ5 для отправки объектов к микросерсиву по отправке писем. Добавлен конвертер объекта к JSON строке. Отредактированы контроллеры для работы с активной очередью.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
